--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Vito's</title>
-    <style>
-</style>
+    <link href="style.css">
     </head>
 <body>
 
