Add json, Add splash, Add css og Add guide menu

--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
 <head>
     <meta charset="utf-8">
     <title>Vito's</title>
-    <link href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Sail" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     </head>
 <body>
 
-<script>
+    <img src="Vito_imgs/Vito_splash.png" alt="Vito's splash">
+    <section class="Info">
+        <h2>Information</h2>
+
+    </section>
+
+
+<section class="guide">
+        <button class="menu-item" kategori="Alle"><h2>Alle</h2></button>
+        <button class="menu-item" kategori="Forret"><h2>Forret</h2></button>
+        <button class="menu-item" kategori="Hovedret"><h2>Hovedret</h2></button>
+        <button class="menu-item" kategori="Dessert"><h2>Dessert</h2></button>
+        <button class="menu-item" kategori="Drikkevare"><h2>Drikkevare</h2></button>
+</section>
+
+
+<main class="container">
+        <section class="data-container"></section>
+    </main>
+    <template class="data-template">
+      <article class="ret">
+          <img src="" alt=""><br>
+          <h2></h2><br>
+          <span class="kategori"></span>
+           Pris: <span class="pris"></span>
+      </article>
+   </template>
+
+
+<footer>
+
+</footer>
+    <script>
+
     </script>
     </body>
 
